styles.css
/*
Cascading Style sheet File
*/



/* Header Section */
header{
    background-image:url(./Assets/Hero-bg.png);
    height:698px;
    width: 1440px;
    margin: 0 auto;
}

.header-content{
    display:flex;
    justify-content: space-around;
    list-style: none;
    margin: 0 auto;
    height:200px;
}
.logo{
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-size: 24px;
     font-weight: bold;
    text-transform: uppercase;
    text-decoration: none;
    text-decoration-thickness: bold;
    color: #6366f1;
           
}
.btn {
    background: #6366f1;
    color: white;
    border: none;
    padding: 12px 24px;
    border-radius: 8px;
    text-decoration: none;
    font-weight: 500;
    cursor: pointer;
   
}
.hero-section {
   display: block;
   text-align: center;
}
.hero-section h2{
    font-family:Georgia, 'Times New Roman', Times, serif;
    font-size: 48px;

}
.hero-section-btn{
    background: #6366f1;
    color: white;
    border: none;
     font-family:Georgia, 'Times New Roman', Times, serif;
    padding: 12px 24px;
    border-radius: 8px;
    text-decoration: none;
    font-weight: 500;
    cursor: pointer;
}

.action-center{
    display: flex;
    justify-content: space-around;
    list-style: none;
    align-items: center;
   
}

.article-headline {
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-size: 36px;
    color: #252432 ;
}
.article-text {
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    font-size: 24px;
    color: #8D8E99 ;
} 

.action-center img{
    border-radius: 35px;
}

